fix: javadoc warning fixes
This changeset generally fixes all Javadoc warnings at JVM 21, and
upgrades the LTS Javadoc release to 21. Slight code changes have
been made to fix Javadoc issues; no logic has changed.

- fix: various javadoc flag fixes
- fix: deprecations and other javadoc warnings
- chore: upgrade javadoc plugin to latest
- chore: upgrade javadoc java spec version → 21

Signed-off-by: Sam Gammon <sam@elide.ventures>